--- a/dashy/config/my-config.yml
+++ b/dashy/config/my-config.yml
@@ -1,8 +1,55 @@
 appConfig:
   theme: one-dark
   layout: auto
-  iconSize: large
+  iconSize: medium
   language: pt
+  customCss: >-
+    @media (min-width: 1780px) { .home
+    .item-group-container:not(.item-size-large) { grid-template-columns:
+    repeat(3, 1fr); } } .home .item-group-container.item-size-large
+    .item-group-grid, .home .item-group-container.orientation-vertical
+    .item-group-grid { display: flex !important; }
+  customColors:
+    one-dark:
+      primary: '#c5cad3'
+      background: '#282c33'
+      background-darker: '#1c1f23'
+  startingView: default
+  defaultOpeningMethod: newtab
+  statusCheck: false
+  statusCheckInterval: 0
+  faviconApi: allesedv
+  routingMode: history
+  enableMultiTasking: false
+  widgetsAlwaysUseProxy: false
+  webSearch:
+    disableWebSearch: false
+    searchEngine: duckduckgo
+    customSearchEngine: https://duckduckgo.com/?q=
+    openingMethod: newtab
+    searchBangs: {}
+  enableFontAwesome: true
+  enableMaterialDesignIcons: false
+  hideComponents:
+    hideHeading: false
+    hideNav: false
+    hideSearch: false
+    hideSettings: false
+    hideFooter: false
+  auth:
+    enableGuestAccess: false
+    users: []
+    enableKeycloak: false
+  showSplashScreen: false
+  preventWriteToDisk: false
+  preventLocalSave: false
+  disableConfiguration: false
+  allowConfigEdit: true
+  enableServiceWorker: false
+  disableContextMenu: false
+  disableUpdateChecks: false
+  disableSmartSort: false
+  enableErrorReporting: true
 pageInfo:
   title: Home Lab
   description: ''
@@ -17,7 +64,7 @@ sections:
     displayData:
       sortBy: default
       rows: 1
-      cols: 3
+      cols: 2
       collapsed: false
       hideForGuests: false
     items:
@@ -34,6 +81,7 @@ sections:
       - title: 9anime
         icon: favicon
         url: https://9anime.to/home
+        target: sametab
         id: 2_1956_anime
       - title: Rico
         icon: https://www.rico.com.vc/login/favicon.png
@@ -61,6 +109,10 @@ sections:
         icon: favicon
         url: https://www.dropbox.com/home
         id: 8_1956_dropbox
+      - title: Q-Dance
+        icon: favicon
+        url: https://q-dance.com
+        id: 9_1956_qdance
   - name: Networking
     icon: fas fa-network-wired
     items:
@@ -172,7 +224,7 @@ sections:
         id: 0_829_portainer
       - title: RabbitMQ
         description: Manager
-        icon: favicon
+        icon: hl-rabbitmq
         url: http://192.168.56.107:15672/
         id: 1_829_rabbitmq
       - title: Redis Commander
