--- a/homepage/config/bookmarks.yaml
+++ b/homepage/config/bookmarks.yaml
@@ -11,6 +11,6 @@
       - abbr: GM
         href: https://gmail.com
 - LinkedIn:
-    - linkedin:
+    - LinkedIn:
       - abbr: LI
         href: https://www.linkedin.com/feed/
