--- a/homepage/config/settings.yaml
+++ b/homepage/config/settings.yaml
@@ -1,7 +1,12 @@
 ---
 # For configuration options and examples, please see:
 # https://gethomepage.dev/en/configs/settings
-
+headerStyle: clean
+target: _self
+layout:
+  Media & Entertainment:
+    style: row
+    columns: 4
 providers:
   openweathermap: openweathermapapikey
   weatherapi: weatherapiapikey
